syntax = "proto3";

package api.videoCore.service.v1;

option go_package = "lehu-video/api/videoCore/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.videoCore.service.v1";

import "api/videoCore/service/v1/base.proto";

message Collection{
	string id = 1;
	string user_id = 2;
	string name = 3;
	string description = 4;
}

service CollectionService {
	rpc CreateCollection (CreateCollectionReq) returns (CreateCollectionResp);
	rpc UpdateCollection (UpdateCollectionReq) returns (UpdateCollectionResp);
	rpc RemoveCollection (RemoveCollectionReq) returns (RemoveCollectionResp);
	rpc GetCollectionById(GetCollectionByIdReq) returns (GetCollectionByIdResp);
	rpc ListCollection(ListCollectionReq) returns (ListCollectionResp);


	rpc AddVideo2Collection(AddVideo2CollectionReq) returns(AddVideo2CollectionResp);
	rpc RemoveVideoFromCollection(RemoveVideoFromCollectionReq) returns (RemoveVideoFromCollectionResp);
	rpc ListVideo4Collection(ListVideo4CollectionReq) returns (ListVideo4CollectionResp);
	rpc IsCollected(IsCollectedReq) returns (IsCollectedResp);
	rpc CountCollect4Video(CountCollect4VideoReq) returns (CountCollect4VideoResp);


}

message CreateCollectionReq {
	string name = 1;
	string description = 2;
	string user_id = 3;
}
message CreateCollectionResp {
	Metadata meta = 1;
}

message UpdateCollectionReq {
	string id = 1;
	string name = 2;
	string description = 3;
	string user_id = 4;
}
message UpdateCollectionResp {
	Metadata meta = 1;
}

message RemoveCollectionReq {
	string id = 1;
	string user_id = 2;
}
message RemoveCollectionResp {
	Metadata meta = 1;
}

message GetCollectionByIdReq{
	string id = 1;
}

message GetCollectionByIdResp{
	Collection collection = 1;
	Metadata meta = 2;
}

message ListCollectionReq{
	string user_id = 1;
	PageStatsReq page_stats = 2;
}

message ListCollectionResp{
	repeated Collection collections = 1;
	Metadata meta = 2;
	PageStatsResp page_stats = 3;
}

message AddVideo2CollectionReq{
	string collection_id = 1; // 不传则添加到默认收藏夹
	string video_id = 2;
	string user_id = 3;
}

message AddVideo2CollectionResp{
	Metadata meta = 1;
}

message RemoveVideoFromCollectionReq{
	string collection_id = 1;
	string video_id = 2;
	string user_id = 3;
}

message RemoveVideoFromCollectionResp{
	Metadata meta = 1;
}

message ListVideo4CollectionReq{
	string collection_id = 1;
	PageStatsReq page_stats = 2;
}

message ListVideo4CollectionResp{
	repeated string video_id_list = 1;
	Metadata meta = 2;
	PageStatsResp page_stats = 3;
}

message IsCollectedReq{
	string user_id = 1;
	repeated string video_id_list = 2;
}

message IsCollectedResp{
	repeated string video_id_list = 1;
	Metadata meta = 2;
}

message CountCollect4VideoResult {
	string id = 1;
	int64 count = 2;
}

message CountCollect4VideoReq{
	repeated string video_id_list = 1;
}

message CountCollect4VideoResp{
	repeated CountCollect4VideoResult count_result = 1;
	Metadata meta = 2;
}




